<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:font="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <com.app.afridge.views.AdvancedTextView
        android:id="@+id/text_list_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:text="@string/label_list_name"
        android:textColor="@color/text_secondary"
        font:customFont="@string/font_bold"/>

    <com.app.afridge.views.AdvancedAutoCompleteTextView
        android:id="@+id/edit_list_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_list_name_label"
        android:layout_margin="@dimen/padding_small"
        android:background="@android:color/transparent"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:text="@string/shopping_list"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_size_large"
        font:customFont="@string/font_light"/>
    <!--android:textAllCaps="true"-->

    <!-- A RecyclerView with some commonly used attributes -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/text_last_edited"
        android:layout_below="@+id/edit_list_name"
        android:scrollbars="vertical"/>

    <com.app.afridge.views.AdvancedTextView
        android:id="@+id/text_last_edited"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_list_item"
        android:layout_margin="@dimen/padding_small"
        android:gravity="end"
        android:text="@string/last_edited"
        android:textColor="@color/text_secondary"
        font:customFont="@string/font_light"/>

    <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
        android:id="@+id/edit_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/height_hack"
        android:layout_margin="@dimen/padding_small"
        android:hint="@string/hint_enter_note"
        android:imeOptions="actionDone"
        android:maxLength="160"
        android:singleLine="true"
        android:textColor="@color/text_primary"
        font:met_baseColor="@color/text_primary"
        font:met_floatingLabel="highlight"
        font:met_primaryColor="@color/accent"
        font:met_singleLineEllipsis="true"
        font:met_maxCharacters="160"
        font:met_accentTypeface="@string/font_light"/>

    <LinearLayout
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <com.app.afridge.views.AdvancedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:gravity="center"
            android:padding="@dimen/padding_normal"
            android:text="@string/hint_no_notes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_secondary"
            font:customFont="@string/font_light"/>
    </LinearLayout>

    <View
        android:id="@+id/height_hack"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
