<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <com.app.afridge.views.AdvancedTextView
        android:id="@+id/text_filter_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="start"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"
        android:paddingTop="@dimen/padding_normal"
        android:text="@string/date_filter"
        android:textColor="@color/primary_dark"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        font:customFont="@string/font_bold" />

    <com.app.afridge.views.AdvancedTextView
        android:id="@+id/text_filter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_filter_label"
        android:gravity="start"
        android:paddingBottom="@dimen/padding_normal"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_size_large"
        font:customFont="@string/font_light" />

    <!-- A RecyclerView with some commonly used attributes -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/text_filter"
        android:scrollbars="vertical" />


    <LinearLayout
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/text_filter"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/empty_fridge" />

        <com.app.afridge.views.AdvancedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:gravity="center"
            android:padding="@dimen/padding_normal"
            android:text="@string/hint_no_history"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_secondary"
            app:customFont="@string/font_light" />
    </LinearLayout>

    <View
        android:id="@+id/height_hack"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
