<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                    xmlns:tools="http://schemas.android.com/tools"
                                    xmlns:font="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:padding="@dimen/padding_normal"
                                    card_view:cardCornerRadius="4dp"
                                    card_view:cardElevation="2dp">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.app.afridge.ui.fragments.wizard.WelcomeFragment">

        <com.app.afridge.views.Typewriter
            android:id="@+id/text_title_welcome"
            android:layout_width="match_parent"
            android:padding="@dimen/padding_normal"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:textSize="@dimen/text_size_large"
            android:text="@string/welcome_title"
            android:textColor="@color/primary_dark"
            android:layout_height="wrap_content"
            font:customFont="@string/font_light"/>

        <ImageView
            android:id="@+id/image_welcome"
            android:src="@drawable/fridge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_below="@+id/text_title_welcome"
            android:layout_above="@+id/text_description_welcome"
            android:contentDescription="@string/app_name"/>

        <com.app.afridge.views.Typewriter
            android:id="@+id/text_description_welcome"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:padding="@dimen/padding_normal"
            android:gravity="center"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/welcome_description"
            android:textColor="@color/text_secondary"
            android:layout_above="@+id/height_hack"
            android:layout_height="wrap_content"
            font:customFont="@string/font_light"/>

        <View
            android:id="@+id/height_hack"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>